#
# Change log of IntaRNA available at 
#
# https://github.com/BackofenLab/IntaRNA
#
################################################################################

development version

190319 Martin Raden :
 + tests/runIntaRNA.sh : runs tests using the IntaRNA binary
 + tests/data :
   + noLP-exact 
   + noLP-exact-seed

190318 Martin Raden :
 * IntaRNA/OutputConstraint :
   + noLP : whether or not lonely (non-stacked) interaction bps are allowed
   * constructor( + noLP )
 * IntaRNA/InteractionRange :
   * energy init = E_INF (was signaling_NaN())
 * IntaRNA/Interaction :
   * energy init = E_INF (was signaling_NaN())
   * IntaRNA/Interaction::Seed :
     + operator == ()
   + operator == ()
     + check for second base pair
 * IntaRNA/PredictorMfe :
   * updateOptima() :
   * reportOptima() :
     * bugfix of degenerate energy handling + simplification
 * IntaRNA/PredictorMfe2d :
 * IntaRNA/PredictorMfe2dSeed :
   + support for OutConstraint::noLP
   * fillHybridE( + callUpdateOptima ) : updating optima now optional
   * traceBack() :
     * bugfix : call of fillHybridE( callUpdateOptima = false ) to avoid 
       redundant updateOptima() calls
   + support for OutConstraint::noLP
 * bin/CommandLineParsing :
   + outNoLP : whether or not lonely (non-stacked) interaction bps are allowed

190315 Martin Raden :
 * IntaRNA/Accessibility :
   + decomposeByMaxED() : replaces decomposeByMinPu()
   - decomposeByMinPu() : renamed to decomposeByMaxED()
 * IntaRNA/InteractionEnergy :
   + energyAdd + get*() : shift of the energy spectrum to be applied in getE()
   * constructor( + energyAdd )
   * getE() :
     + energyAdd
   * EnergyContributions :
     + energyAdd member
   * getE_contributions() :
     + energyAdd
 * IntaRNA/InteractionEnergy* :
   * constructor( + energyAdd )
 * SeedHandler :
   + areLoopOverlapping() : tests whether or not the last x and the first x
     loops of two seeds are formed by identical base pairs