@@ -47,6 +47,11 @@ predict( const IndexRange & r1
 		throw std::runtime_error("PredictorMfe2dHelixBlockHeuristic::predict("+toString(r1)+","+toString(r2)+") is not sane");
 #endif
 
+
+	if (outConstraint.noLP) {
+		INTARNA_NOT_IMPLEMENTED("outNoLP not yet implemented for PredictorMfe2dHelixBlockHeuristic");
+	}
+
 	// set index offset
 	energy.setOffset1(r1.from);
 	energy.setOffset2(r2.from);
