@@ -52,6 +52,10 @@ predict( const IndexRange & r1
 		throw std::runtime_error("PredictorMfe2dHelixBlockHeuristicSeed::predict("+toString(r1)+","+toString(r2)+") is not sane");
 #endif
 
+	if (outConstraint.noLP) {
+		INTARNA_NOT_IMPLEMENTED("outNoLP not yet implemented for PredictorMfe2dHelixBlockHeuristicSeed");
+	}
+
 	// set index offset
 	energy.setOffset1(r1.from);
 	energy.setOffset2(r2.from);
